--- a/index.html
+++ b/index.html
@@ -213,6 +213,12 @@
                 <p>Learn how to use Herotech and understand each tool's functionality.</p>
                 <a href="#help" class="card-button">View Help</a>
             </div>
+
+            <div class="card">
+                <h3>Full Stack Developer Surveys</h3>
+                <p>Navigate through interactive surveys covering all aspects of full stack development questions, from frontend to backend and deployment.</p>
+                <a href="https://html-full-stack-deve-8z3l.bolt.host/" class="card-button">Start Surveys</a>
+            </div>
         </div>
         
         <section id="help">
@@ -245,13 +251,13 @@
             document.body.classList.toggle('light-mode');
         }
     </script>
-    <!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
 var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 s1.async=true;
-s1.src='https://embed.tawk.to/68e28b3fe02a57195070ddfc/1j6qevsub';
+s1.src='https://embed.tawk.to/68ebee6a7ab386194e5c96e4/1j7cpml31';
 s1.charset='UTF-8';
 s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
