--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@
                 <p>Connect with developers, earn rewards through bounties, and monetize your skills.</p>
                 <a href="https://devconnect-earn.lovable.app/" target="_blank" class="card-button">Launch Tool</a>
             </div>
+
+              <div class="card">
+                <h3>Survey</h3>
+                <p>Test youself with the full stack surveys.</p>
+                <a href="https://html-full-stack-deve-8z3l.bolt.host/" target="_blank" class="card-button">Start quiz</a>
+            </div>
             
             <div class="card">
                 <h3>Help Guide</h3>
